--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bright Horizon Institute</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Basic Metadata -->
+  <title>Bright Horizon Institute</title>
+  <meta name="description"
+    content="Enroll at Bright Horizon Institute – Jersey City's hybrid school offering state board-approved programs in Medical Assistant, Medical Billing and Coding, EKG, Phlebotomy, Hospitality Management, Web Design, Office Management, Computer Support, Solar Panel Installation, Java Programming, Business Analysis, Landscaping, Cisco Certification, Patient Care Technician, Resident Electrician, Home Health Aide, and CompTIA A+." />
+
+  <meta name="keywords" content="
+medical assistant training, medical billing and coding, electrocardiogram course, phlebotomy classes, hospitality management certification, web design course, office management computer basics, computer support specialist, solar panel installer training, java programmer course, business analyst training, landscaping and groundskeeping, Cisco Certified Network Associate, patient care technician, resident electrician program, home health aide, CompTIA A+ certification, NHA certification, AHLEI credential, OSHA 30 training, NABCEP solar, Microsoft certificate program
+">
+  <meta name="author" content="Bright Horizon Institute" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Bright Horizon Institute" />
+  <meta property="og:description"
+    content="Hybrid cosmetology programs in Jersey City – Learn hair, skin, nails, and makeup with expert instructors." />
+  <meta property="og:image" content="/og-image.jpg" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:title" content="Bright Horizon Institute" />
+  <meta name="twitter:description" content="Jersey City's only hybrid cosmetology school – Enroll today!" />
+  <meta name="twitter:image" content="/og-image.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
